# avaliacao_camada_transporte

./: Cargo.toml  Dockerfile  README.md
client/: Cargo.toml
client/src/: console.rs  main.rs
io_utils/: Cargo.toml
io_utils/src/: lib.rs
messages/: Cargo.toml
messages/src/: client_to_server.rs  lib.rs  server_to_client.rs
server/: Cargo.toml
server/src/: main.rs
