[package]
name = "io_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["io-util"] }
messages = { path = "../messages" }
anyhow = "1.0.65"
serde_json = "1.0.86"
serde = "1.0.145"
