[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["macros", "sync"] }
messages = { path = "../messages" }
io_utils = { path = "../io_utils" }
futures = "0.3.24"
